[package]
name = "openfx-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
cc = "1.2.19"

[features]
derive_serde = ["dep:serde"]
